glFusion ChangeLog

v1.2.1.svn
----------
- Implement PLG_templatePath: plugin helper function to find templates (Mark H.)
- Extend ADMIN_simpleList -> ADMIN_arrayList, allows sortable columns (Mark H.)
- Rename ADMIN_sortList function to ADMIN_sortArray (Mark H.)
- Fix filecheck_data - create missing nouveau custom template dirs (Mark H.)
- Plugin Admin - allow sorting of columns in Plugin list (Mark H.)
- Replace/fix sort direction arrows in ADMIN_list and ADMIN_arrayList (Mark H.)


v1.2.0.pl3
----------
- Database backup would always fail with 0 byte file message. (Mark)
- Delete story from admin list did not work (result of a fix done in pl2) (Mark)
- Plugin API bug - PLG_callFunctionForAllPlugins() did not cycle through
  all the plugins - returned after first hit. (Mark)

v1.2.0.pl2
----------
- When using embedded images in a story, if you select an image to delete and
  save, the story is deleted. (Mark)
- Save button text disappears if submitting a story and it contains missing
  fields. (Mark)
- Always use the title attribute in What's New (Mark)
- Fixed issue with Gallery Remote2 not properly logging into the site (Mark)

v1.2.0.pl1
----------
- COM_checkWords() was trimming spaces when it should not. (Mark)
- Links: Invalid multibyte string would cause crash. (Mark)
- showblock: auto tag did not honor block permissions. (Mark)
- COM_onFrontPage() and COM_whatsNew() had a global variable conflict with
  $newstories (Mark)
- fs_multilanguage configuration field was misspelled in new install (Mark)

v1.2.0
------
- Add rel="nofolllow" to bbcode url (Mark)
- Updated / new Czech translations compliments of Ivan Simunek (Mark)
- General (x)HTML compliance fixes (Eric)
- Added ie7 horizontal scrollbar fix (Eric)
- Added help text for Registration Type (Eric)
- Moved comments links to same line in story footer (Eric)
- Re-freshed CAPTCHA layouts (Eric and Mark H.)
- CAPTCHA - Exclude 0,O,1,I,L from dynamic CAPTCHA generation (Mark)